--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
 rel="stylesheet"
 />
-    <link rel="stylesheet" href="./css/styles.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header container">
+        <nav class="header-navigation">
    <a class="site-logo link">Web<span class="logo-second">Studio</span></a>
-   <nav class="header-navigation">
        <ul class="header-list list">
     <li class="header-item"><a href=""class="header-link link current">Студия</a></li>
     <li class="header-item"><a href="./portfolio.html"class="header-link link ">Портфолио</a></li>
