--- a/index.html
+++ b/index.html
@@ -17,20 +17,16 @@ rel="stylesheet"
 <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="header container">
+    <header class="header">
+        <div class="container header-container">
         <nav class="header-navigation">
-   <a class="site-logo link">Web<span class="logo-second">Studio</span></a>
+   <a class="site-logo link logo">Web<span class="logo-second logo">Studio</span></a>
        <ul class="header-list list">
-    <li class="header-item"><a href=""class="header-link link current">Студия</a></li>
-    <li class="header-item"><a href="./portfolio.html"class="header-link link ">Портфолио</a></li>
-    <li class="header-item"><a href=""class="header-link link">Контакты</a></li>
-
-</ul>   
-</nav>
-   <ul class="header-first-list list">
-       <li class="header-item"><a class="header-back link"href="">info@devstudio.com</a></li>
+    <li class="header-item''  '
+       <li class="header-item"><a class="header-back link"href="">info@devstudio.com</a></li>  
        <li class="header-item"><a class="header-tel link" href="tel:+380961111111tel:">+38 096 111 11 11 </a></li>
     </header>
+</div>
 <main>
     <section class="hero">
         <h1 class="hero-title">Эффективные решения <br>для вашего  бизнеса</h1>
