--- a/portfolio.html
+++ b/portfolio.html
@@ -1,34 +1,44 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" /> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossori gin /> 
-<link 
-href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
-rel="stylesheet"
-/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossori gin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
-<header class="header">
-   <a class="site-logo link">Web<span class="logo-second">Studio</span></a>
-   <nav class="header-navigation">
-       <ul class="header-list list">
-    <li class="header-item"><a href="index.html"class="header-link link">Студия</a></li>
-    <li class="header-item"><a href=""class="header-link link current">Портфолио</a></li>
-    <li class="header-item"><a href=""class="header-link link">Контакты</a></li>
 
-</ul>   
-</nav>
-   <ul class="header-first-list list">
-       <li class="header-item"><a class="header-back link"href="">info@devstudio.com</a></li>
-       <li class="header-item"><a class="header-tel link" href="tel:+380961111111tel:">+38 096 111 11 11 </a></li>
+<body>
+    <header class="header">
+        <div class="container">
+            <nav class="header-navigation">
+                <a class="site-logo link logo ">Web<span class="logo-second logo">Studio</span></a>
+                <ul class="header-list list">
+                    <li class="header-item"><a href="./index.html" class="header-link link ">Студия</a></li>
+                    <li class="header-item"><a href="" class="header-link link current">Портфолио</a></li>
+                    <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
+
+                </ul>
+            </nav>
+            <ul class="header-first-list list">
+                <li class="header-item"><a class="header-back link" href="">info@devstudio.com</a></li>
+                <li class="header-item"><a class="header-tel link" href="tel:+380961111111tel:">+38 096 111 11 11 </a>
+                </li>
+            </ul>
+        </div>
     </header>
    <main>
+       <section class="section">
+       <div class="container">
        <h1 class="visually-hidden">cписки</h1>
        <ul class="list-btn-port list">
            <li class="item-btn"><button class="btn-port" type="button">Все</button></li>
@@ -37,6 +47,8 @@ rel="stylesheet"
            <li class="item-btn"><button class="btn-port" type="button">Дизайн</button></li>
            <li class="item-btn"><button class="btn-port" type="button">Маркетинг</button></li>
        </ul>
+       </div>
+       <div class="container">
    <ul class="port-list list">
        <li class="port-item">
         <img src="./images_port/port_10.jpg" 
@@ -122,19 +134,25 @@ height="294"
     <h2 class="title-port" >Growing Business</h2>
     <p class="text-port">Приложение</p>
 </li>
+</div>
+       </section>
 </main>
-<footer class="footer">
-    <a class="site-logo link">Web<span class="logo-second-half">Studio</span></a>
-    <address class="footer-adress">
-        <ul class="footer-list list">
-            <li class="footer-item"><a class="footer-text link" href="https://goo.gl/maps/nd1LVx3sfAS18rse7"
-                target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26"</a>
-            </li>
-            <li class="footer-item"><a class="footer-link link" href="">info@example.com</a>
-                <li class="footer-item "><a class="footer-link link " href="tel:+380961111111tel:">+38 096 111 11 11 </a>
+<footer class="footer section">
+    <div class="container">
+        <a class="site-logo link ">Web<span class="logo-second-half log">Studio</span></a>
+        <address class="footer-adress">
+            <ul class="footer-list list">
+                <li class="footer-item"><a class="footer-text link" href="https://goo.gl/maps/nd1LVx3sfAS18rse7"
+                        target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26"</a>
+                </li>
+                <li class="footer-item"><a class="footer-link link" href="">info@example.com</a>
+                <li class="footer-item "><a class="footer-link link " href="tel:+380961111111tel:">+38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </address>
-    </footer>
-    
-    
+    </div>
+</footer>
+</body>
+
+</html>
