--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ rel="stylesheet"
     <header class="header">
         <div class="container">
 <nav class="header-navigation">
-            <a class="site-logo link logo ">Web<span class="logo-second logo">Studio</span></a>
+            <a class="site-logo link logo ">Web<span class="logo-second ">Studio</span></a>
        <ul class="header-list list">
     <li class="header-item"><a href=""class="header-link link current">Студия</a></li>
     <li class="header-item"><a href="./portfolio.html"class="header-link link ">Портфолио</a></li>
