--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <header class="header">
         <div class="container">
             <nav class="header-navigation">
-                <a class="site-logo link logo ">Web<span class="logo-second logo">Studio</span></a>
+                <a class="site-logo link logo ">Web<span class="logo-second ">Studio</span></a>
                 <ul class="header-list list">
                     <li class="header-item"><a href="./index.html" class="header-link link ">Студия</a></li>
                     <li class="header-item"><a href="" class="header-link link current">Портфолио</a></li>
